git-ops/services/fastapi/01-namesspace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fastapi
  labels:
    app: fastapi
    project: piercuta
    env: dev
    apiVersion: v1
