git-ops/services/fastapi/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
  namespace: fastapi
  labels:
    app: fastapi
    project: piercuta
    env: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
        project: piercuta
        env: dev
        # piercuta.com/node-type: fastapi
    spec:
      # nodeSelector:
      #   piercuta.com/node-type: fastapi
      serviceAccountName: fastapi-sa
      containers:
      - name: fastapi
        image: "532673134317.dkr.ecr.eu-west-1.amazonaws.com/services/ecs/fastapi_app:dev"
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 1Gi
            memory: 1Gi
          limits:
            cpu: 1Gi
            memory: 1Gi
