git-ops/services/fastapi/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: fastapi
  labels:
    app: fastapi
    project: piercuta
    env: dev
spec:
  type: ClusterIP
  selector:
    app: fastapi
  ports:
  - port: 80
    targetPort: 8000
